# suchemacschine

./: .env.test  .gitignore  SEMESTER_VARIATIONS_DOCUMENTATION.md  STARPLAN_INTEGRATION_REPORT.md  app_search_fix.py  asta_full_data.json  asta_indexed_data.jsonl  asta_scraper.py  asta_website_scraper.py  cli.py  content_quality_report.json  deploy.sh  docker-compose.yaml  extract_schedule.py  extract_starplan.py  feedback.jsonl  find_ical_mechanism.py  hs_aalen_extended_data.json  hs_aalen_indexed_data.jsonl  hs_aalen_playwright_scraper.py  hybrid_search_fixed.py  index_asta_to_qdrant.py  index_hs_aalen_to_qdrant.py  index_starplan_to_qdrant.py  prepare_asta_data.py  prepare_hs_aalen_extended_data.py  prepare_starplan_data_fixed.py  prepare_starplan_semesters_data.py  pyproject.toml  reindex.sh  scrape_report.json  scrape_starplan.py  scraper_improved.py  starplan_data.json  starplan_indexed_data.jsonl  starplan_multi_semester_scraper.py  starplan_scraper.py  test_full_pdf.py  test_ical_urls.py  test_multi_search.py  (+8 more)
backend/: Dockerfile  app.py  audit_content_quality.py  augment_with_pdfs.py  clean_data.py  eval.py  index_to_qdrant.py  init_pdf_index.py  pdf_extractor.py  prepare_data.py  prepare_data_with_pdfs.py  pyproject.toml  scrape_rector.py  scraper.py  search.py  test_queries.json  validate_scrape.py
configs/: hs-aalen.yaml
diary/: 001-project-setup.md  002-search-failure-retry.md  003-search-quality-feedback.md  004-github-models-integration.md  005-implementation-verification.md  006-rate-limiting-request.md  007-rate-limiting-implementation.md  (+22 more)
(+130 files in other folders)
