[project]
name = "suchemacschine-backend"
version = "0.1.0"
description = "HS Aalen AI Search Backend"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "qdrant-client>=1.13.2",
    "requests>=2.31.0",
    "aiofiles>=23.1.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
