[project]
name = "suchemacschine-backend"
version = "0.1.0"
description = "HS Aalen Vector Search Backend"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "qdrant-client>=1.13.2",
    "fastembed>=0.3.0",

    "aiofiles>=23.1.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
